feat: updated first version bff yaml
